--- a/main.css
+++ b/main.css
@@ -13,3 +13,19 @@ html {
     font-family: "Inter var", sans-serif;
     background-color: darkgray;
 }
+
+.navbar-top {
+    background-color: rgb(26, 23, 23);
+    font-family: "Inter var", sans-serif;
+    font-size: 16px;
+    overflow: hidden;
+}
+
+.navbar-top a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
