--- a/main.css
+++ b/main.css
@@ -22,10 +22,10 @@ html {
 }
 
 .navbar-top a {
-    float: left;
-    color: #f2f2f2;
+    float: right;
+    color: #e7e3e3;
     text-align: center;
-    padding: 14px 16px;
+    padding: 16px 16px;
     text-decoration: none;
     font-size: 17px;
 }
