--- a/main.css
+++ b/main.css
@@ -16,16 +16,29 @@ html {
 
 .navbar-top {
     background-color: rgb(26, 23, 23);
-    font-family: "Inter var", sans-serif;
-    font-size: 16px;
     overflow: hidden;
 }
 
 .navbar-top a {
     float: right;
-    color: #e7e3e3;
-    text-align: center;
-    padding: 16px 16px;
-    text-decoration: none;
-    font-size: 17px;
+  display: block;
+  color: #e6e5e5;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
+
+  .topnav .icon {
+    display: none;
+  }
