--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ html {
 html {
     font-size: 19px;
     font-family: "Inter var", sans-serif;
-    background-color: white;
+    background-color: #171616;
 }
 
 .navbar-top {
